File-based storage for URLs